added files needed for Eflux2

--- a/notebooks/Bayespergillus.ipynb
+++ b/notebooks/Bayespergillus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 2;\n",
+       "                var nbb_cell_id = 1;\n",
        "                var nbb_unformatted_code = \"%load_ext nb_black\\n\\nimport sys, gzip, pickle\\n\\nsys.path.append(\\\".\\\")\\nprint(sys.version)\";\n",
        "                var nbb_formatted_code = \"%load_ext nb_black\\n\\nimport sys, gzip, pickle\\n\\nsys.path.append(\\\".\\\")\\nprint(sys.version)\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -52,14 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Restricted license - for non-production use only - expires 2022-01-13\n",
+      "Using license file /Users/zuck016/gurobi.lic\n",
+      "Set parameter TokenServer to value leghorn.emsl.pnl.gov\n",
       "N:  (171, 172) Ex:  (172, 171) Ey:  (172, 2) v_star:  (172,) vn:  (47, 172) v:  (172, 48)\n"
      ]
     },
@@ -92,7 +93,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 3;\n",
+       "                var nbb_cell_id = 2;\n",
        "                var nbb_unformatted_code = \"sys.path.append(\\\"../src\\\")\\nfrom run_inference import (\\n    Ex,\\n    Ex_t,\\n    Ey,\\n    Ey_t,\\n    T,\\n    advi_file,\\n    argparse,\\n    chi_clip,\\n    chi_obs,\\n    chi_ss,\\n    cobra,\\n    e,\\n    e_file,\\n    e_indexer,\\n    e_inds,\\n    e_laplace_inds,\\n    e_measured,\\n    e_unmeasured,\\n    e_zero_inds,\\n    emll,\\n    en,\\n    initialize_elasticity,\\n    ll,\\n    log_en_t,\\n    log_vn_obs,\\n    log_vn_ss,\\n    m_compartments,\\n    model,\\n    model_file,\\n    n_exp,\\n    n_iterations,\\n    np,\\n    os,\\n    pd,\\n    pm,\\n    pymc_model,\\n    r_compartments,\\n    r_labels,\\n    ref_state,\\n    rxn,\\n    to_consider,\\n    v,\\n    v_file,\\n    v_inds,\\n    v_star,\\n    v_star_file,\\n    vn,\\n    vn_ss,\\n    x,\\n    x_file,\\n    x_inds,\\n    xn,\\n    yn,\\n    yn_t,\\n)\";\n",
        "                var nbb_formatted_code = \"sys.path.append(\\\"../src\\\")\\nfrom run_inference import (\\n    Ex,\\n    Ex_t,\\n    Ey,\\n    Ey_t,\\n    T,\\n    advi_file,\\n    argparse,\\n    chi_clip,\\n    chi_obs,\\n    chi_ss,\\n    cobra,\\n    e,\\n    e_file,\\n    e_indexer,\\n    e_inds,\\n    e_laplace_inds,\\n    e_measured,\\n    e_unmeasured,\\n    e_zero_inds,\\n    emll,\\n    en,\\n    initialize_elasticity,\\n    ll,\\n    log_en_t,\\n    log_vn_obs,\\n    log_vn_ss,\\n    m_compartments,\\n    model,\\n    model_file,\\n    n_exp,\\n    n_iterations,\\n    np,\\n    os,\\n    pd,\\n    pm,\\n    pymc_model,\\n    r_compartments,\\n    r_labels,\\n    ref_state,\\n    rxn,\\n    to_consider,\\n    v,\\n    v_file,\\n    v_inds,\\n    v_star,\\n    v_star_file,\\n    vn,\\n    vn_ss,\\n    x,\\n    x_file,\\n    x_inds,\\n    xn,\\n    yn,\\n    yn_t,\\n)\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -173,6 +174,224 @@
     "    yn,\n",
     "    yn_t,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Reaction r1 at 0x7f870140ce80>,\n",
+       " <Reaction r5a at 0x7f8701426048>,\n",
+       " <Reaction r6 at 0x7f87014263c8>,\n",
+       " <Reaction r7 at 0x7f8701426780>,\n",
+       " <Reaction r8 at 0x7f8701426940>,\n",
+       " <Reaction r9 at 0x7f8701426b38>,\n",
+       " <Reaction r10 at 0x7f8701426d30>,\n",
+       " <Reaction r12a at 0x7f870142e0f0>,\n",
+       " <Reaction r13a at 0x7f870142e358>,\n",
+       " <Reaction r14 at 0x7f870142e550>,\n",
+       " <Reaction r15 at 0x7f870142e9b0>,\n",
+       " <Reaction r16a at 0x7f870142ed30>,\n",
+       " <Reaction r17 at 0x7f870142eef0>,\n",
+       " <Reaction r18 at 0x7f87014362b0>,\n",
+       " <Reaction r19 at 0x7f8701436630>,\n",
+       " <Reaction r20 at 0x7f8701436b38>,\n",
+       " <Reaction r22 at 0x7f870143c0b8>,\n",
+       " <Reaction r23 at 0x7f870143c438>,\n",
+       " <Reaction r24a at 0x7f870143c6a0>,\n",
+       " <Reaction r25 at 0x7f870143ca90>,\n",
+       " <Reaction r26 at 0x7f870143ccf8>,\n",
+       " <Reaction r27 at 0x7f870143cef0>,\n",
+       " <Reaction r28 at 0x7f8701445320>,\n",
+       " <Reaction r29a at 0x7f8701445668>,\n",
+       " <Reaction r1273 at 0x7f87014459b0>,\n",
+       " <Reaction r38a at 0x7f8701445dd8>,\n",
+       " <Reaction r42 at 0x7f870144c2b0>,\n",
+       " <Reaction r43 at 0x7f870144c5c0>,\n",
+       " <Reaction r44 at 0x7f870144c860>,\n",
+       " <Reaction r45a at 0x7f870144cbe0>,\n",
+       " <Reaction r47 at 0x7f870144cf28>,\n",
+       " <Reaction r54 at 0x7f8701454400>,\n",
+       " <Reaction r61 at 0x7f87014547f0>,\n",
+       " <Reaction r56a at 0x7f8701454be0>,\n",
+       " <Reaction r56b at 0x7f8701454f60>,\n",
+       " <Reaction r60 at 0x7f870145b4e0>,\n",
+       " <Reaction r64 at 0x7f870145b940>,\n",
+       " <Reaction r65 at 0x7f870145bc88>,\n",
+       " <Reaction r67 at 0x7f8708f320f0>,\n",
+       " <Reaction r68a at 0x7f8708f32390>,\n",
+       " <Reaction r93 at 0x7f8708f327f0>,\n",
+       " <Reaction r94 at 0x7f8708f32ba8>,\n",
+       " <Reaction r95 at 0x7f8708f32e10>,\n",
+       " <Reaction r113a at 0x7f8708f391d0>,\n",
+       " <Reaction r118a at 0x7f8708f39518>,\n",
+       " <Reaction r122 at 0x7f8708f397f0>,\n",
+       " <Reaction r124 at 0x7f8708f402e8>,\n",
+       " <Reaction r127 at 0x7f8708f40da0>,\n",
+       " <Reaction r135 at 0x7f8708f49128>,\n",
+       " <Reaction r146 at 0x7f8708f49390>,\n",
+       " <Reaction r155 at 0x7f8708f496a0>,\n",
+       " <Reaction r159 at 0x7f8708f499e8>,\n",
+       " <Reaction r160 at 0x7f8708f49da0>,\n",
+       " <Reaction r162 at 0x7f8708f51320>,\n",
+       " <Reaction r169 at 0x7f8708f51748>,\n",
+       " <Reaction r170 at 0x7f8708f51a90>,\n",
+       " <Reaction r171 at 0x7f8708f51cf8>,\n",
+       " <Reaction r189 at 0x7f8708f51f98>,\n",
+       " <Reaction r1286 at 0x7f8708f58358>,\n",
+       " <Reaction r977 at 0x7f8708f58710>,\n",
+       " <Reaction r978 at 0x7f8708f58ac8>,\n",
+       " <Reaction r239 at 0x7f8708f58eb8>,\n",
+       " <Reaction r243 at 0x7f8708f5e320>,\n",
+       " <Reaction r244 at 0x7f8708f5efd0>,\n",
+       " <Reaction r245 at 0x7f8708f69780>,\n",
+       " <Reaction r251 at 0x7f8708f69eb8>,\n",
+       " <Reaction r258 at 0x7f870042a668>,\n",
+       " <Reaction r259 at 0x7f8722ae0e10>,\n",
+       " <Reaction r262 at 0x7f8722ae83c8>,\n",
+       " <Reaction r258m at 0x7f8722ae8828>,\n",
+       " <Reaction r290 at 0x7f8722ae8ba8>,\n",
+       " <Reaction r287 at 0x7f8722aee0f0>,\n",
+       " <Reaction r288 at 0x7f8722aee4e0>,\n",
+       " <Reaction r295 at 0x7f8722aee8d0>,\n",
+       " <Reaction r296 at 0x7f8722aeec50>,\n",
+       " <Reaction r297 at 0x7f8722aeefd0>,\n",
+       " <Reaction r298 at 0x7f8722af6390>,\n",
+       " <Reaction r299 at 0x7f8722af6748>,\n",
+       " <Reaction r300 at 0x7f8722af6c88>,\n",
+       " <Reaction PAND at 0x7f8722afc0b8>,\n",
+       " <Reaction r436 at 0x7f8722afc320>,\n",
+       " <Reaction r443 at 0x7f8722afc588>,\n",
+       " <Reaction r444 at 0x7f8722afc978>,\n",
+       " <Reaction r486 at 0x7f8722afccc0>,\n",
+       " <Reaction r487 at 0x7f8722b040b8>,\n",
+       " <Reaction r490 at 0x7f8722b04470>,\n",
+       " <Reaction r491 at 0x7f8722b047b8>,\n",
+       " <Reaction r541 at 0x7f8722b04b00>,\n",
+       " <Reaction r542 at 0x7f8722b04dd8>,\n",
+       " <Reaction r559 at 0x7f8722b0c208>,\n",
+       " <Reaction r560 at 0x7f8722b0c630>,\n",
+       " <Reaction r825 at 0x7f8722b0cc18>,\n",
+       " <Reaction r826 at 0x7f8722b0ce10>,\n",
+       " <Reaction r906 at 0x7f8722b131d0>,\n",
+       " <Reaction r907 at 0x7f8722b13588>,\n",
+       " <Reaction r908 at 0x7f8722b13a20>,\n",
+       " <Reaction r1092 at 0x7f8722b13cc0>,\n",
+       " <Reaction r1093 at 0x7f8722b13e48>,\n",
+       " <Reaction r1094 at 0x7f8722b13fd0>,\n",
+       " <Reaction r1069 at 0x7f8722b1a198>,\n",
+       " <Reaction r1142 at 0x7f8722b1a320>,\n",
+       " <Reaction r1150 at 0x7f8722b1a588>,\n",
+       " <Reaction r1153 at 0x7f8722b1a710>,\n",
+       " <Reaction r1152 at 0x7f8722b1a898>,\n",
+       " <Reaction r1149 at 0x7f8722b1aa20>,\n",
+       " <Reaction r1148 at 0x7f8722b1aba8>,\n",
+       " <Reaction r1147 at 0x7f8722b1ad30>,\n",
+       " <Reaction r1086 at 0x7f8722b1aeb8>,\n",
+       " <Reaction r1047a at 0x7f8741501080>,\n",
+       " <Reaction r1046 at 0x7f8741501278>,\n",
+       " <Reaction r1045 at 0x7f8741501400>,\n",
+       " <Reaction r1063 at 0x7f8741501588>,\n",
+       " <Reaction r1154 at 0x7f8741501ef0>,\n",
+       " <Reaction r1146 at 0x7f874150b0b8>,\n",
+       " <Reaction r1172 at 0x7f874150b2b0>,\n",
+       " <Reaction r1173 at 0x7f874150b518>,\n",
+       " <Reaction r1175 at 0x7f874150b710>,\n",
+       " <Reaction r1133 at 0x7f874150b908>,\n",
+       " <Reaction r1160 at 0x7f874150bb00>,\n",
+       " <Reaction r1157 at 0x7f874150bc88>,\n",
+       " <Reaction r1156 at 0x7f874150bf98>,\n",
+       " <Reaction BOUNDARY_ACe at 0x7f8741514320>,\n",
+       " <Reaction BOUNDARY_CO2e at 0x7f8741514438>,\n",
+       " <Reaction BOUNDARY_FORe at 0x7f8741514518>,\n",
+       " <Reaction BOUNDARY_GLCe at 0x7f87415145f8>,\n",
+       " <Reaction BOUNDARY_GLCNTe at 0x7f87415146d8>,\n",
+       " <Reaction BOUNDARY_He at 0x7f87415147b8>,\n",
+       " <Reaction BOUNDARY_H2Oe at 0x7f8741514898>,\n",
+       " <Reaction BOUNDARY_HNO3e at 0x7f8741514978>,\n",
+       " <Reaction BOUNDARY_O2e at 0x7f8741514a58>,\n",
+       " <Reaction BOUNDARY_TARe at 0x7f8741514b38>,\n",
+       " <Reaction r1320 at 0x7f8741514c18>,\n",
+       " <Reaction r1321 at 0x7f8701426240>,\n",
+       " <Reaction r1322 at 0x7f8701426438>,\n",
+       " <Reaction r1323 at 0x7f8701426b00>,\n",
+       " <Reaction r1324 at 0x7f870142e390>,\n",
+       " <Reaction r1325 at 0x7f870142e8d0>,\n",
+       " <Reaction r184 at 0x7f870142ef98>,\n",
+       " <Reaction r184c at 0x7f87014367f0>,\n",
+       " <Reaction r146a at 0x7f8701436cf8>,\n",
+       " <Reaction r162b at 0x7f870143c400>,\n",
+       " <Reaction r1905 at 0x7f870143c9b0>,\n",
+       " <Reaction r1906 at 0x7f8701445240>,\n",
+       " <Reaction r1907 at 0x7f8701445748>,\n",
+       " <Reaction r1934 at 0x7f8701445f28>,\n",
+       " <Reaction r1937 at 0x7f870144ca20>,\n",
+       " <Reaction r1941 at 0x7f87014545c0>,\n",
+       " <Reaction r1942 at 0x7f8701454b00>,\n",
+       " <Reaction r2027 at 0x7f870145b358>,\n",
+       " <Reaction r2035 at 0x7f870145b780>,\n",
+       " <Reaction r2036 at 0x7f870145bc50>,\n",
+       " <Reaction NE12 at 0x7f870145bfd0>,\n",
+       " <Reaction r2037 at 0x7f8708f326d8>,\n",
+       " <Reaction r2142 at 0x7f8708f32e48>,\n",
+       " <Reaction r2143 at 0x7f8708f39358>,\n",
+       " <Reaction r2144 at 0x7f8708f39908>,\n",
+       " <Reaction r2335 at 0x7f8708f40e80>,\n",
+       " <Reaction r2391 at 0x7f8708f49438>,\n",
+       " <Reaction r2642 at 0x7f8708f49780>,\n",
+       " <Reaction BOUNDARY_SMPYRKe at 0x7f8708f49cc0>,\n",
+       " <Reaction r2655 at 0x7f8708f49e10>,\n",
+       " <Reaction r2673 at 0x7f8708f51630>,\n",
+       " <Reaction r2818 at 0x7f8708f51978>,\n",
+       " <Reaction r2819 at 0x7f8708f51ef0>,\n",
+       " <Reaction r2820 at 0x7f8708f580f0>,\n",
+       " <Reaction r2821 at 0x7f8708f586a0>,\n",
+       " <Reaction r2847 at 0x7f8708f58d68>,\n",
+       " <Reaction BAPAT at 0x7f8708f5e0f0>,\n",
+       " <Reaction HPDH at 0x7f8708f5e748>,\n",
+       " <Reaction ALD6 at 0x7f8708f696d8>,\n",
+       " <Reaction 3HPPt at 0x7f8708852cf8>,\n",
+       " <Reaction EX_3hpp_e at 0x7f8722ae07f0>]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 3;\n",
+       "                var nbb_unformatted_code = \"model.reactions\";\n",
+       "                var nbb_formatted_code = \"model.reactions\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model.reactions"
    ]
   },
   {
