round2 data comments
Co-authored-by: Jeremy Zucker <Jeremy.Zucker@pnnl.gov>

--- a/notebooks/Eflux4A.niger.ipynb
+++ b/notebooks/Eflux4A.niger.ipynb
@@ -480,6 +480,7 @@
     }
    ],
    "source": [
+    "# TODO: normalize to new reference strain for round 2\n",
     "global_prot = pd.read_csv('../data/normalized_to_3HP+PYC+3op1D_global_jgi.csv',index_col='Transcript')\n",
     "global_prot"
    ]
@@ -516,6 +517,7 @@
     }
    ],
    "source": [
+    "# todo: update gurobi license (not required to use gurobi)\n",
     "model = cobra.io.load_json_model('../models/iJB1325_HP.nonnative_genes.pubchem.flipped.nonzero.reduced.json')\n",
     "model.solver = 'gurobi'\n",
     "model.solver"
@@ -710,7 +712,8 @@
     }
    ],
    "source": [
-    "experiment = pd.read_csv('experiment_w_reps.tsv', sep='\\t')\n",
+    "# todo: update data directory (round 1, round 2)\n",
+    "experiment = pd.read_csv('experiment_w_reps.tsv', sep='\\t') \n",
     "experiment['ICE']= experiment['Strain'].str.replace('https://registry.agilebiofoundry.org/entry/', 'ABF_00')\n",
     "experiment = experiment.sort_values(['ICE','Line Name']).dropna().set_index('Line Name')\n",
     "experiment"
