more comments on the data for round 2

--- a/notebooks/Eflux4A.niger.ipynb
+++ b/notebooks/Eflux4A.niger.ipynb
@@ -712,7 +712,7 @@
     }
    ],
    "source": [
-    "# todo: update data directory (round 1, round 2)\n",
+    "# TODO: update data directory (round 1, round 2)\n",
     "experiment = pd.read_csv('experiment_w_reps.tsv', sep='\\t') \n",
     "experiment['ICE']= experiment['Strain'].str.replace('https://registry.agilebiofoundry.org/entry/', 'ABF_00')\n",
     "experiment = experiment.sort_values(['ICE','Line Name']).dropna().set_index('Line Name')\n",
@@ -725,6 +725,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: update for round 2\n",
     "line_rates = pd.read_csv('a.niger_strain_specific_rates.csv')\n",
     "line_rates = line_rates.sort_values(['Strain (ICE)', 'Omics Sample ID']).dropna()\n",
     "line_rates.index = experiment.index\n",
@@ -760,6 +761,7 @@
     }
    ],
    "source": [
+    "# TODO: update ref line and strain for round 2\n",
     "ref_line = 'SF ABF93_7-R3'\n",
     "ref_strain = 'ABF_008348'\n",
     "ref_line_glucose_rate = line_rates.loc[ref_line,'glucose_uptake_rates (mmol/gDCW * hr)']\n",
@@ -1828,6 +1830,7 @@
     }
    ],
    "source": [
+    "# TODO: update for round 2\n",
     "efluxes = pd.DataFrame(dict([(rep, fluxes[rep].to_frame()['fluxes']) for rep in fluxes]))\n",
     "reduced_costs = pd.DataFrame(dict([(rep, fluxes[rep].to_frame()['reduced_costs']) for rep in fluxes]))\n",
     "efluxes.to_csv('Eflux2_flux_yield.csv')\n",
